SUBDIRS = gavl

private_headers = \
accel.h \
arith128.h \
attributes.h \
audio.h \
blend.h \
bswap.h \
colorspace.h \
countrycodes.h \
deinterlace.h \
dsp.h \
float_cast.h \
gavlshm.h \
hw_private.h \
interleave.h \
io_private.h \
language_table.h \
macros.h \
memalign.h \
mix.h \
sampleformat.h \
samplerate.h \
scale.h \
socket_private.h \
transform.h \
vaapi.h \
video.h \
volume.h

noinst_HEADERS =  $(private_headers)
