AM_CFLAGS = @LIBGAVL_CFLAGS@

noinst_LTLIBRARIES = libgavf.la

libgavf_la_SOURCES = \
gavf.c          \
avconn.c        \
buffer.c        \
footer.c        \
gavfoptions.c   \
gavi.c          \
gavlstructs.c   \
io.c            \
io_mem.c        \
io_socket.c     \
io_stdio.c      \
io_tls.c        \
packetbuffer.c  \
packetindex.c   \
pconn.c         \
syncindex.c

