pkginclude_HEADERS = \
buffer.h \
chapterlist.h \
compression.h \
connectors.h \
edl.h \
gavf.h \
gavl.h \
gavltime.h \
gavl_version.h \
gavldsp.h \
gavlsocket.h \
http.h \
hw.h \
hw_dmabuf.h \
hw_egl.h \
hw_gl.h \
hw_v4l2.h \
hw_vaapi.h \
hw_vaapi_x11.h \
keycodes.h \
log.h \
numptr.h \
state.h \
timecode.h \
trackinfo.h \
gavldefs.h \
metadata.h \
metatags.h \
msg.h \
peakdetector.h \
utils.h \
value.h


EXTRA_DIST = gavl_version.h.in
