pkginclude_HEADERS = \
buffer.h \
chapterlist.h \
compression.h \
connectors.h \
edl.h \
gavf.h \
gavldefs.h \
gavldsp.h \
gavl.h \
gavlsocket.h \
gavltime.h \
http.h \
hw_dmabuf.h \
hw_egl.h \
hw_gl.h \
hw.h \
hw_shm.h \
hw_v4l2.h \
hw_vaapi.h \
hw_vaapi_x11.h \
keycodes.h \
log.h \
Makefile.am \
Makefile.in \
metadata.h \
metatags.h \
msg.h \
numptr.h \
peakdetector.h \
state.h \
threadpool.h \
timecode.h \
trackinfo.h \
utils.h \
value.h


EXTRA_DIST = gavl_version.h.in
